--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "3.0.0rc5",
     "hogan-express" : "0.3.3",
     "moment" : "1.7.2",
-    "mongoose" : "3.5.4"
+    "mongoose" : "3.5.4",
+    "request" : "2.16.6"
 
   },
   "engines" : {
