--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "hogan-express" : "0.3.3",
     "moment" : "1.7.2",
     "mongoose" : "3.5.4",
-    "request" : "2.16.6"
+    "request" : "2.16.6",
+    "cartodb" : "latest"
 
   },
   "engines" : {
